exports[`Header should be display empty text when not fetching 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "justifyContent": "center",
        "marginTop": 20,
      }
    }>
    <TouchableHighlight
      activeOpacity={0.85}
      onPress={[Function]}
      underlayColor="black">
      <Image
        source={1}
        style={
          Object {
            "height": 100,
            "width": 100,
          }
        } />
    </TouchableHighlight>
  </View>
</View>
`;

exports[`Header should be display spinner when fetching 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "justifyContent": "center",
        "marginTop": 20,
      }
    }>
    <TouchableHighlight
      activeOpacity={0.85}
      onPress={[Function]}
      underlayColor="black">
      <Image
        source={1}
        style={
          Object {
            "height": 100,
            "width": 100,
          }
        } />
    </TouchableHighlight>
    <ActivityIndicator
      animating={true}
      size="large" />
  </View>
</View>
`;
